--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 socket2 = { workspace = true }
+log = { workspace = true }
+pretty_env_logger = { workspace = true }
