--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+byor = { path = ".." }
 socket2 = { workspace = true }
 log = { workspace = true }
 pretty_env_logger = { workspace = true }
