--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 socket2 = { workspace = true }
 log = { workspace = true }
 pretty_env_logger = { workspace = true }
+byor = { path = ".." }
