further work to try set up testing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,7 @@ byteorder = "1.4.3"
 
 [dependencies]
 byteorder = { workspace = true }
+
+[dev-dependencies]
+server = { path = "server" }
+client = { path = "client" }
